Update test classes to improve test readability